metro-client/src/components/Map.css
.leaflet-container {
  height: 600px;
  width: 100%;
  flex: 2;
}

.ui-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
  height: 100%;
  gap: 20px;
}


.ui-controls {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding: 12px;
  gap: 10px;
  background-color: #f9f9f9;
  border-right: 1px solid #ccc;
  width: 320px;
  height: fit-content;
  border-radius: 8px;
  margin-right: 20px;
}

.ui-controls label {
  font-weight: bold;
  margin-right: 6px;
}

.ui-controls select {
  padding: 6px;
  font-size: 14px;
  width: 100%;
}

.loading-screen {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100vw;
  font-size: 28px;
  font-weight: 600;
  color: #222;
}

.map-wrapper {
  width: 95vw; 
  max-width: 1400px;
  height: 100vh;
  margin-top: 25px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.chips-bar {
  width: 95vw;
  max-width: 1400px;
  text-align: center;
}

.chips-line-label {
  font-weight: 700;
  margin-bottom: 8px;
  font-size: 18px;
}

.chips-row {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 8px;
}

.station-chip {
  padding: 6px 10px;
  border-radius: 8px;
  color: black;
  font-weight: 600;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
}

